--- a/ManaogMachProb1/ManaogMachProb1/Views/Instructor/Index.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Instructor/Index.cshtml
@@ -7,7 +7,7 @@
 <table  class="table table-dark">
             
         <tr>
-            <th colspan="5">Instructor</th>
+            <th colspan="6">Instructor</th>
         </tr>
 
         <tr>
@@ -17,6 +17,7 @@
             <td>Hiring Date</td>
             <td>Rank</td>
             <td>Details</td>
+        <td>Edit</td>
            
             
         </tr>
@@ -29,7 +30,10 @@
             <td>@Instructor.HiringDate</td>
       
             <td><a asp-action="ShowDetail" asp-route-id="@Instructor.Id">Show Details</a></td>
+            <td><a asp-action="EditInstructor" asp-route-id="@Instructor.Id">Edit</a></td>
           
         </tr>
     }
 </table>
+
+<a asp-action="AddInstructor" asp-controller="Instructor"><button>Add Instructor</button></a>
