--- a/ManaogMachProb1/ManaogMachProb1/Views/Student/Index.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Student/Index.cshtml
@@ -7,7 +7,7 @@
 <table  class="table table-dark">
             
         <tr>
-            <th colspan="6">Student</th>
+            <th colspan="7">Student</th>
         </tr>
 
         <tr>
@@ -17,6 +17,7 @@
             <td>Email</td>
             <td>GPA</td>
             <td>Details</td>
+               <td>Edit</td>
            
             
         </tr>
@@ -29,9 +30,13 @@
             <td>@student.Email</td>
             <td>@student.GPA</td>
             <td><a asp-action="ShowDetail" asp-route-id="@student.Id">Show Details</a></td>
+            <td><a asp-action="EditStudent" asp-route-id="@student.Id">Edit</a></td>
           
         </tr>
     }
 </table>
 
 <a asp-action="Student" asp-controller="Student"><button>VIEW PREVIOUS MACHINE PROBLEM</button></a>
+
+<a asp-action="AddStudent" asp-controller="Student"><button>ADD STUDENT</button></a>
+
