--- a/ManaogMachProb1/ManaogMachProb1/Views/Student/ShowDetail.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Student/ShowDetail.cshtml
@@ -35,3 +35,5 @@
         <td>@Model.GPA</td>
     </tr>
 </table>
+
+<a asp-action="DeleteStudent" asp-route-id="@Model.Id" style=" text-decoration:none ; color:black!important"> <button type="button" class="btn btn-info text-black m-2 w-75"> Delete </button></a>
