--- a/ManaogMachProb1/ManaogMachProb1/Views/Student/Index.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Student/Index.cshtml
@@ -7,7 +7,7 @@
 <table  class="table table-dark">
             
         <tr>
-            <th colspan="7">Student</th>
+            <th colspan="8">Student</th>
         </tr>
 
         <tr>
@@ -17,7 +17,9 @@
             <td>Email</td>
             <td>GPA</td>
             <td>Details</td>
-               <td>Edit</td>
+            <td>Edit</td>
+            <td>Delete</td>
+        
            
             
         </tr>
@@ -30,7 +32,8 @@
             <td>@student.Email</td>
             <td>@student.GPA</td>
             <td><a asp-action="ShowDetail" asp-route-id="@student.Id">Show Details</a></td>
-            <td><a asp-action="EditStudent" asp-route-id="@student.Id">Edit</a></td>
+            <td><a a class="btn btn-primary" asp-action="EditStudent" asp-route-id="@student.Id">Edit</a></td>
+            <td><a class= "btn btn-danger" asp-action="DeleteStudent" asp-route-id="@student.Id">Delete</a></td>
           
         </tr>
     }
