--- a/ManaogMachProb1/ManaogMachProb1/Views/Instructor/DeleteInstructor.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Instructor/DeleteInstructor.cshtml
@@ -22,7 +22,7 @@
         <label asp-for="IsTenured">Status</label>
         <select asp-for="IsTenured" class="form-control" disabled>
             <option value="true">Permanent</option>
-            <option value="false">Provisionary</option>
+            <option value="false">Probationary</option>
         </select>
     </div>
     <br />
