--- a/ManaogMachProb1/ManaogMachProb1/Views/Student/Index.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Student/Index.cshtml
@@ -39,7 +39,7 @@
     }
 </table>
 
-<a asp-action="Student" asp-controller="Student"><button>VIEW PREVIOUS MACHINE PROBLEM</button></a>
+<a class="btn btn-primary" asp-action="Student" asp-controller="Student">VIEW PREVIOUS MACHINE PROBLEM</a>
 
-<a asp-action="AddStudent" asp-controller="Student"><button>ADD STUDENT</button></a>
+<a class="btn btn-primary" asp-action="AddStudent" asp-controller="Student">ADD STUDENT</a>
 
