with Register and Login codes (identity)

--- a/ManaogMachProb1/ManaogMachProb1/Views/Student/EditStudent.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Student/EditStudent.cshtml
@@ -1,14 +1,18 @@
 ﻿@model Student;
 
 <h1> Edit Student</h1>
-<form asp-action="EditStudent" method="post">
-     <div class="form-group">
+<form asp-action="Edit" method="post">
+    <div class="form-group">
         <label asp-for="FirstName">First Name</label>
-        <input asp-for="FirstName" class="form-control"  />
+        <input asp-for="FirstName" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="LastName">Last Name</label>
         <input asp-for="LastName" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Email">Email</label>
+        <input asp-for="Email" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Course">Course</label>
@@ -18,14 +22,7 @@
         <label asp-for="AdmissionDate">Date Enrolled</label>
         <input asp-for="AdmissionDate" class="form-control" />
     </div>
-    <div class="form-group">
-        <label asp-for="Email">Email</label>
-        <input asp-for="Email" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label asp-for="GPA">GPA</label>
-        <input asp-for="GPA" class="form-control" />
-    </div>
     <br />
-    <button type="submit" class="btn btn-primary">Edit</button>
+    <button type="submit" class="btn btn-success">Update</button>
+    <button onclick="history.back()" class="btn btn-secondary">Cancel</button>
 </form>
