--- a/ManaogMachProb1/ManaogMachProb1/Views/Instructor/AddInstructor.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Instructor/AddInstructor.cshtml
@@ -3,10 +3,6 @@
 <h1> Add Instructor</h1>
 <form asp-action="AddInstructor" method="post">
     <div class="form-group">
-        <label asp-for="Id">ID</label>
-        <input asp-for="Id" class="form-control" />
-    </div>
-    <div class="form-group">
         <label asp-for="FirstName">First Name</label>
         <input asp-for="FirstName" class="form-control" />
     </div>
@@ -15,19 +11,20 @@
         <input asp-for="LastName" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="IsTenured">Status</label>
-        <select asp-for="IsTenured" class="form-control">
-            <option value="true">Permanent</option>
-            <option value="false">Provisionary</option>
-        </select>
-    </div>
-    <div class="form-group">
         <label asp-for="Rank">Rank</label>
         <select asp-for="Rank" asp-items="Html.GetEnumSelectList(typeof(Rank))" class="form-control"></select>
     </div>
     <div class="form-group">
-        <label asp-for="HiringDate">Date Hired</label>
+        <label asp-for="IsTenured">Status</label>
+        <select asp-for="IsTenured" class="form-control">
+            <option value="true">Permanent</option>
+            <option value="false">Probationary</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label asp-for="HiringDate">Hiring Date</label>
         <input asp-for="HiringDate" class="form-control" />
     </div>
+    <br />
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
