--- a/ManaogMachProb1/ManaogMachProb1/Views/Instructor/EditInstructor.cshtml
+++ b/ManaogMachProb1/ManaogMachProb1/Views/Instructor/EditInstructor.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Instructor;
 
 <h1> Edit Instructor</h1>
-<form asp-action="EditInstructor" method="post">
+<form asp-action="Edit" method="post">
     <div class="form-group">
         <label asp-for="FirstName">First Name</label>
         <input asp-for="FirstName" class="form-control" />
@@ -11,12 +11,8 @@
         <input asp-for="LastName" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="Rank">Course</label>
+        <label asp-for="Rank">Rank</label>
         <select asp-for="Rank" asp-items="Html.GetEnumSelectList(typeof(Rank))" class="form-control"></select>
-    </div>
-    <div class="form-group">
-        <label asp-for="HiringDate">Date Enrolled</label>
-        <input asp-for="HiringDate" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="IsTenured">Status</label>
@@ -25,6 +21,11 @@
             <option value="false">Probationary</option>
         </select>
     </div>
+    <div class="form-group">
+        <label asp-for="HiringDate">Hiring Date</label>
+        <input asp-for="HiringDate" class="form-control" />
+    </div>
     <br />
-    <button type="submit" class="btn btn-primary">Edit</button>
+    <button type="submit" class="btn btn-primary">Update</button>
+    <button onclick="history.back()" class="btn btn-primary">Cancel</button>
 </form>
